add improvements and update readme
